feat: enforce approval governance for unattended replay